--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Canada -- History'
 - !lcc 'F1001'
+- GITenberg
 title: L'histoire du Canada
 url: http://www.gutenberg.org/ebooks/25036
